# Groundwork

./: .env.example  .gitignore  Cargo.toml  DATA_LICENSE  Dockerfile  METHODOLOGY.md  README.md  WHAT_THIS_IS_NOT.md  docker-compose.yml  fa_map.json  fa_test.html  fly.toml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml  ingest.yml
actions/: README.md  actions.v1.json
coverage/: README.md
crates/adapters/: Cargo.toml
crates/adapters/src/: acs.rs  chr.rs  geo.rs  household_pulse.rs  lib.rs  meal_gap.rs  socrata_snap.rs  two11.rs  warn_ny.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/fusion/: Cargo.toml  weights.v1.toml
crates/fusion/src/: lib.rs
crates/groundwork-types/: Cargo.toml
crates/groundwork-types/src/: lib.rs
crates/harness/: Cargo.toml
crates/harness/src/: anthropic.rs  config.rs  extract.rs  gates.rs  geo_places.rs  lib.rs  rss.rs  verify.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: agentic.rs  alerts.rs  baselines.rs  export.rs  fetcher.rs  ingest.rs  main.rs  nowcast.rs  tracts.rs
crates/replay/: Cargo.toml
crates/replay/src/: main.rs
crates/store/: Cargo.toml
crates/store/migrations/: 0002_geo_units.sql  0003_sources.sql  0004_signals.sql  0005_baselines.sql  0006_nowcasts.sql  0007_impact_records.sql  0008_multi_metric.sql  0010_alerts.sql  0011_local_news.sql
crates/store/src/: lib.rs  raw_store.rs
fixtures/: README.md  acs_sample.json  chr_sample.csv  mmg_sample.csv  pulse_sample.csv  socrata_snap_sample.json  warn_sample.csv
fixtures/golden/: socrata_snap.json  warn_ny.json
harness/: README.md  feeds.v1.toml
harness/prompt/: README.md  system.md
harness/prompt/exemplars/: 01_pantry_hours_cut.json  02_no_signal.json  03_layoff_with_ambiguity.json
harness/schema/: signal_extraction.json
partners/: BRIEF.md  DEMO_SCRIPT.md  GROUND_TRUTH_PROTOCOL.md
partners/sample_exports/: nowcast_36119.csv  nowcast_36119.geojson  signals_36119.csv
ui/: app.js  index.html
