[workspace]
resolver = "2"
members = [
    "crates/groundwork-types",
    "crates/store",
    "crates/adapters",
    "crates/fusion",
    "crates/harness",
    "crates/orchestrator",
    "crates/api",
    "crates/replay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ephemerent/groundwork"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
geojson = "0.24"
geo-types = "0.7"
shapefile = { version = "0.6", features = ["geo-types"] }
scraper = "0.21"
csv = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["fs", "cors"] }
zip = "2"
