[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
groundwork-types = { path = "../groundwork-types" }
store = { path = "../store" }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
