[package]
name = "fusion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
groundwork-types = { path = "../groundwork-types" }
serde = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
