[package]
name = "harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
groundwork-types = { path = "../groundwork-types" }
store = { path = "../store" }
adapters = { path = "../adapters" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
scraper = { workspace = true }
feed-rs = "2"
jsonschema = "0.26"
unicode-normalization = "0.1"
